--- a/dephy-worker-archiver/docker-compose.yml
+++ b/dephy-worker-archiver/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   postgresql:
     image: postgres:16
+    restart: always
     environment:
       POSTGRES_USER: dephy
       POSTGRES_PASSWORD: dephy
@@ -11,6 +12,7 @@ services:
 
   poo-archiver:
     image: dephyio/dephy-worker-registry:master
+    restart: always
     depends_on:
       - postgresql
     environment:
