--- a/dephy-messaging-network/docker-compose.yml
+++ b/dephy-messaging-network/docker-compose.yml
@@ -43,6 +43,8 @@ services:
       serve
       --pg-url 'postgresql://dephy:dephy@default-pgbouncer:6432/dephy_messaging_network'
       --publisher-pg-url 'postgresql://dephy:dephy@publisher-pgbouncer:6432/dephy_messaging_network'
+      --db-max-write-connections "${DB_MAX_WRITE_CONNECTIONS:-10}"
+      --db-max-read-connections "${DB_MAX_READ_CONNECTIONS:-10}"
       --api-addr '0.0.0.0:8000'
     ports:
       - "0.0.0.0:8000:8000"
