--- a/dephy-messaging-network/docker-compose.yml
+++ b/dephy-messaging-network/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       POSTGRESQL_USERNAME: dephy
       POSTGRESQL_PASSWORD: dephy
       PGBOUNCER_DATABASE: dephy_messaging_network
+      PGBOUNCER_MAX_CLIENT_CONN: ${PGBOUNCER_MAX_CLIENT_CONN:-120}
 
   publisher-pgbouncer:
     image: bitnami/pgbouncer:1.24.0
