--- a/dephy-messaging-network/docker-compose.yml
+++ b/dephy-messaging-network/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       POSTGRESQL_PASSWORD: dephy
       PGBOUNCER_DATABASE: dephy_messaging_network
       PGBOUNCER_MAX_CLIENT_CONN: ${PGBOUNCER_MAX_CLIENT_CONN:-120}
+      PGBOUNCER_DEFAULT_POOL_SIZE: ${PGBOUNCER_DEFAULT_POOL_SIZE:-20}
 
   publisher-pgbouncer:
     image: bitnami/pgbouncer:1.24.0
@@ -42,7 +43,7 @@ services:
       - default-pgbouncer
       - publisher-pgbouncer
     environment:
-      RUST_LOG: "info,dephy_messaging_network=debug"
+      RUST_LOG: ${ENV_RUST_LOG:-info,dephy_messaging_network=info}
       RUST_BACKTRACE: "1"
     command: >
       serve
