feat: update dephy-messaging-network compose

--- a/dephy-messaging-network/docker-compose.yml
+++ b/dephy-messaging-network/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       POSTGRES_DB: dephy_messaging_network
     shm_size: ${POSTGRESQL_SHM_SIZE:-128mb}
     command: >
-      -c shared_buffers=${POSTGRESQL_SHARED_BUFFERS:-256MB}
-      -c max_connections=${POSTGRESQL_MAX_CONNECTIONS:-100}
+      -c 'config_file=/etc/postgresql/postgresql.conf'
     volumes:
+      - ${POSTGRESQL_CONFIG_FILE:-./postgresql.conf}:/etc/postgresql/postgresql.conf
       - postgresql_data:/var/lib/postgresql/data
       - ./migrations:/docker-entrypoint-initdb.d
 
@@ -20,11 +20,17 @@ services:
     depends_on:
       - postgresql
     environment:
+      POSTGRESQL_HOST: postgresql
       POSTGRESQL_USERNAME: dephy
       POSTGRESQL_PASSWORD: dephy
       PGBOUNCER_DATABASE: dephy_messaging_network
       PGBOUNCER_MAX_CLIENT_CONN: ${PGBOUNCER_MAX_CLIENT_CONN:-120}
       PGBOUNCER_DEFAULT_POOL_SIZE: ${PGBOUNCER_DEFAULT_POOL_SIZE:-20}
+      PGBOUNCER_RESERVE_POOL_SIZE: ${PGBOUNCER_RESERVE_POOL_SIZE:-0}
+      PGBOUNCER_RESERVE_POOL_TIMEOUT: ${PGBOUNCER_RESERVE_POOL_TIMEOUT:-5}
+      PGBOUNCER_SERVER_IDLE_TIMEOUT: ${PGBOUNCER_SERVER_IDLE_TIMEOUT:-600}
+      PGBOUNCER_SERVER_CONNECT_TIMEOUT: ${PGBOUNCER_SERVER_CONNECT_TIMEOUT:-15}
+      PGBOUNCER_POOL_MODE: transaction
 
   publisher-pgbouncer:
     image: bitnami/pgbouncer:1.24.0
@@ -32,6 +38,7 @@ services:
     depends_on:
       - postgresql
     environment:
+      POSTGRESQL_HOST: postgresql
       POSTGRESQL_USERNAME: dephy
       POSTGRESQL_PASSWORD: dephy
       PGBOUNCER_DATABASE: dephy_messaging_network
