--- a/dephy-messaging-network-prod/postgresql.conf
+++ b/dephy-messaging-network-prod/postgresql.conf
@@ -618,7 +618,7 @@ shared_buffers = 256MB			# min 128kB
 #track_activities = on
 #track_activity_query_size = 1024	# (change requires restart)
 #track_counts = on
-#track_io_timing = on
+track_io_timing = on
 #track_wal_io_timing = off
 #track_functions = none			# none, pl, all
 #stats_fetch_consistency = cache	# cache, none, snapshot
