--- a/dephy-messaging-network-prod/docker-compose.yml
+++ b/dephy-messaging-network-prod/docker-compose.yml
@@ -72,7 +72,7 @@ services:
       DATA_SOURCE_USER: dephy
       DATA_SOURCE_PASS: dephy
     command:
-      - '--collector.stat_statements'
+      - "--collector.stat_statements"
     ports:
       - "0.0.0.0:9187:9187"
 
