--- a/monitor-prod/docker-compose.yml
+++ b/monitor-prod/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     image: grafana/grafana
     restart: always
     environment:
-      GF_SECURITY_ADMIN_PASSWORD: ${KEY:-admin}
+      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD:-admin}
       GF_SECURITY_ALLOW_EMBEDDING: true
       GF_AUTH_ANONYMOUS_ENABLED: true
     volumes:
