--- a/dephy-worker-registry/docker-compose.yml
+++ b/dephy-worker-registry/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./migrations:/docker-entrypoint-initdb.d
 
   api:
-    image: dephyio/dephy-worker-registry:master
+    image: dephyio/dephy-worker-registry:${DEPHY_IMAGE_TAG:-latest}
     restart: always
     depends_on:
       - postgresql
@@ -28,7 +28,7 @@ services:
       - "0.0.0.0:9000:9000"
 
   poo-archiver:
-    image: dephyio/dephy-worker-registry:master
+    image: dephyio/dephy-worker-registry:${DEPHY_IMAGE_TAG:-latest}
     restart: always
     depends_on:
       - postgresql
@@ -45,7 +45,7 @@ services:
       --key "${KEY}"
 
   poo-pinger:
-    image: dephyio/dephy-worker-registry:master
+    image: dephyio/dephy-worker-registry:${DEPHY_IMAGE_TAG:-latest}
     restart: always
     depends_on:
       - postgresql
@@ -63,7 +63,7 @@ services:
       --key "${KEY}"
 
   poo-checker:
-    image: dephyio/dephy-worker-registry:master
+    image: dephyio/dephy-worker-registry:${DEPHY_IMAGE_TAG:-latest}
     restart: always
     depends_on:
       - postgresql
