--- a/dephy-messaging-network-prod/docker-compose.yml
+++ b/dephy-messaging-network-prod/docker-compose.yml
@@ -49,6 +49,7 @@ services:
     environment:
       RUST_LOG: ${ENV_RUST_LOG:-info,dephy_messaging_network_auth=info}
       RUST_BACKTRACE: "1"
+      SENTRY_DSN: ${SENTRY_DSN}
     command: >
       serve
       --config /opt/dephy-messaging-network-auth/config.yml
@@ -67,6 +68,7 @@ services:
     environment:
       RUST_LOG: ${ENV_RUST_LOG:-info,dephy_messaging_network=info}
       RUST_BACKTRACE: "1"
+      SENTRY_DSN: ${SENTRY_DSN}
     command: >
       serve
       --pg-url 'postgresql://dephy:dephy@default-pgbouncer:6432/dephy_messaging_network'
