--- a/dephy-worker-registry/docker-compose.yml
+++ b/dephy-worker-registry/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     environment:
       RUST_LOG: "info,dephy_worker_registry=debug"
       RUST_BACKTRACE: "1"
+      SENTRY_DSN: ${SENTRY_DSN}
     entrypoint: "/usr/bin/dephy-worker-registry-api"
     command: >
       --pg-url 'postgresql://dephy:dephy@postgresql:5432/dephy_worker_registry'
@@ -35,6 +36,7 @@ services:
     environment:
       RUST_LOG: "info,dephy_worker_registry=debug"
       RUST_BACKTRACE: "1"
+      SENTRY_DSN: ${SENTRY_DSN}
     entrypoint: "/usr/bin/dephy-worker-registry-poo"
     extra_hosts:
       host.docker.internal: host-gateway
@@ -52,6 +54,7 @@ services:
     environment:
       RUST_LOG: "info,dephy_worker_registry=debug"
       RUST_BACKTRACE: "1"
+      SENTRY_DSN: ${SENTRY_DSN}
     entrypoint: "/usr/bin/dephy-worker-registry-poo"
     extra_hosts:
       host.docker.internal: host-gateway
@@ -70,6 +73,7 @@ services:
     environment:
       RUST_LOG: "info,dephy_worker_registry=debug"
       RUST_BACKTRACE: "1"
+      SENTRY_DSN: ${SENTRY_DSN}
     entrypoint: "/usr/bin/dephy-worker-registry-poo"
     extra_hosts:
       host.docker.internal: host-gateway
