--- a/dephy-messaging-network/postgresql.conf
+++ b/dephy-messaging-network/postgresql.conf
@@ -618,7 +618,7 @@ shared_buffers = 256MB			# min 128kB
 #track_activities = on
 #track_activity_query_size = 1024	# (change requires restart)
 #track_counts = on
-#track_io_timing = off
+track_io_timing = on
 #track_wal_io_timing = off
 #track_functions = none			# none, pl, all
 #stats_fetch_consistency = cache	# cache, none, snapshot
@@ -744,7 +744,7 @@ shared_buffers = 256MB			# min 128kB
 
 #local_preload_libraries = ''
 #session_preload_libraries = ''
-#shared_preload_libraries = ''	# (change requires restart)
+shared_preload_libraries = 'pg_stat_statements'  # Ensure this is uncommented
 #jit_provider = 'llvmjit'		# JIT library to use
 
 # - Other Defaults -
@@ -820,3 +820,8 @@ shared_buffers = 256MB			# min 128kB
 #------------------------------------------------------------------------------
 
 # Add settings for extensions here
+
+pg_stat_statements.max = 10000
+pg_stat_statements.track = all
+pg_stat_statements.save = on
+pg_stat_statements.track_utility = on
