--- a/dephy-messaging-network/docker-compose.external-pg.yml
+++ b/dephy-messaging-network/docker-compose.external-pg.yml
@@ -8,14 +8,18 @@ services:
     extends:
       file: components.yml
       service: dephy-messaging-network
+    entrypoint: []
     command: >
-      serve
-      --pg-url '${DEPHY_MN_PG_URL}'
-      --db-max-write-connections "${DEPHY_MN_DB_MAX_WRITE_CONNECTIONS:-10}"
-      --db-max-read-connections "${DEPHY_MN_DB_MAX_READ_CONNECTIONS:-10}"
+      sh -c "
+      /usr/bin/dephy-messaging-network serve
+      --pg-url \"${DEPHY_MN_PG_URL}\"
+      --publisher-pg-url 'postgresql://dephy:dephy@publisher-pgbouncer:6432/dephy_messaging_network'
+      --db-max-write-connections \"${DEPHY_MN_DB_MAX_WRITE_CONNECTIONS:-10}\"
+      --db-max-read-connections \"${DEPHY_MN_DB_MAX_READ_CONNECTIONS:-10}\"
       --api-addr '0.0.0.0:8000'
-      --auth-service-url 'http://dephy-messaging-network-auth:8100'
-      --key "${DEPHY_MN_KEY}"
+      $${DEPHY_MN_AUTH_SERVICE_URL:+--auth-service-url \"$DEPHY_MN_AUTH_SERVICE_URL\"}
+      --key \"${DEPHY_MN_KEY}\"
+      "
 
   dephy-messaging-network-cleanup:
     extends:
