--- a/dephy-worker-next/components.yml
+++ b/dephy-worker-next/components.yml
@@ -6,6 +6,17 @@ services:
       RUST_LOG: "info,dephy_worker_registry=debug"
       RUST_BACKTRACE: "1"
       SENTRY_DSN: ${SENTRY_DSN}
-    entrypoint: "/usr/bin/dephy-worker-registry-api"
     ports:
       - "0.0.0.0:9000:9000"
+    extra_hosts:
+      host.docker.internal: host-gateway
+
+  archiver:
+    image: dephyio/dephy-worker-registry:next
+    restart: always
+    environment:
+      RUST_LOG: "info,dephy_worker_registry=debug"
+      RUST_BACKTRACE: "1"
+      SENTRY_DSN: ${SENTRY_DSN}
+    extra_hosts:
+      host.docker.internal: host-gateway
