--- a/dephy-worker-next/docker-compose.local-pg.yml
+++ b/dephy-worker-next/docker-compose.local-pg.yml
@@ -17,9 +17,23 @@ services:
     depends_on:
       - postgresql
     command: >
+      serve
       --pg-url 'postgresql://dephy:dephy@postgresql:5432/dephy_worker_registry'
       --api-addr '0.0.0.0:9000'
+      --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
       --worker-nostr-relay "${DEPHY_WR_WORKER_NOSTR_RELAY:-ws://127.0.0.1:8000}"
+      --key "${DEPHY_WR_KEY}"
+
+  archiver:
+    extends:
+      file: components.yml
+      service: archiver
+    depends_on:
+      - postgresql
+    command: >
+      archive
+      --pg-url 'postgresql://dephy:dephy@postgresql:5432/dephy_worker_registry'
+      --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
       --key "${DEPHY_WR_KEY}"
 
 volumes:
