--- a/dephy-worker-next/docker-compose.external-pg.yml
+++ b/dephy-worker-next/docker-compose.external-pg.yml
@@ -14,11 +14,31 @@ services:
   archiver:
     extends:
       file: components.yml
-      service: archiver
-    depends_on:
-      - postgresql
+      service: daemon
     command: >
       archive
+      --pg-url '${DEPHY_WR_PG_URL}'
+      --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
+      --key "${DEPHY_WR_KEY}"
+
+  pinger:
+    extends:
+      file: components.yml
+      service: daemon
+    command: >
+      ping
+      --forever
+      --pg-url '${DEPHY_WR_PG_URL}'
+      --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
+      --key "${DEPHY_WR_KEY}"
+
+  ping-checker:
+    extends:
+      file: components.yml
+      service: daemon
+    command: >
+      check_ping
+      --forever
       --pg-url '${DEPHY_WR_PG_URL}'
       --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
       --key "${DEPHY_WR_KEY}"
