--- a/dephy-worker-next/docker-compose.local-pg.yml
+++ b/dephy-worker-next/docker-compose.local-pg.yml
@@ -27,11 +27,37 @@ services:
   archiver:
     extends:
       file: components.yml
-      service: archiver
+      service: daemon
     depends_on:
       - postgresql
     command: >
       archive
+      --pg-url 'postgresql://dephy:dephy@postgresql:5432/dephy_worker_registry'
+      --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
+      --key "${DEPHY_WR_KEY}"
+
+  pinger:
+    extends:
+      file: components.yml
+      service: daemon
+    depends_on:
+      - postgresql
+    command: >
+      ping
+      --forever
+      --pg-url 'postgresql://dephy:dephy@postgresql:5432/dephy_worker_registry'
+      --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
+      --key "${DEPHY_WR_KEY}"
+
+  ping-checker:
+    extends:
+      file: components.yml
+      service: daemon
+    depends_on:
+      - postgresql
+    command: >
+      check_ping
+      --forever
       --pg-url 'postgresql://dephy:dephy@postgresql:5432/dephy_worker_registry'
       --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
       --key "${DEPHY_WR_KEY}"
