--- a/dephy-worker-archiver/docker-compose.yml
+++ b/dephy-worker-archiver/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./migrations:/docker-entrypoint-initdb.d
 
   api:
-    image: dephyio/dephy-worker-registry:${DEPHY_IMAGE_TAG:-latest}
+    image: dephyio/dephy-worker-registry:${DEPHY_IMAGE_TAG:-v1.5.0}
     restart: always
     depends_on:
       - postgresql
@@ -29,7 +29,7 @@ services:
       - "0.0.0.0:9001:9001"
 
   poo-archiver:
-    image: dephyio/dephy-worker-registry:${DEPHY_IMAGE_TAG:-latest}
+    image: dephyio/dephy-worker-registry:${DEPHY_IMAGE_TAG:-v1.5.0}
     restart: always
     depends_on:
       - postgresql
