--- a/dephy-worker-registry/docker-compose.external-pg.yml
+++ b/dephy-worker-registry/docker-compose.external-pg.yml
@@ -4,25 +4,27 @@ services:
       file: components.yml
       service: api
     command: >
+      serve
       --pg-url '${DEPHY_WR_PG_URL}'
       --api-addr '0.0.0.0:9000'
+      --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
       --worker-nostr-relay "${DEPHY_WR_WORKER_NOSTR_RELAY:-ws://127.0.0.1:8000}"
       --key "${DEPHY_WR_KEY}"
 
-  poo-archiver:
+  archiver:
     extends:
       file: components.yml
-      service: poo-archiver
+      service: daemon
     command: >
       archive
       --pg-url '${DEPHY_WR_PG_URL}'
       --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
       --key "${DEPHY_WR_KEY}"
 
-  poo-pinger:
+  pinger:
     extends:
       file: components.yml
-      service: poo-pinger
+      service: daemon
     command: >
       ping
       --forever
@@ -30,12 +32,12 @@ services:
       --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
       --key "${DEPHY_WR_KEY}"
 
-  poo-checker:
+  ping-checker:
     extends:
       file: components.yml
-      service: poo-checker
+      service: daemon
     command: >
-      check
+      check_ping
       --forever
       --pg-url '${DEPHY_WR_PG_URL}'
       --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
