--- a/dephy-worker-registry/docker-compose.local-pg.yml
+++ b/dephy-worker-registry/docker-compose.local-pg.yml
@@ -17,15 +17,17 @@ services:
     depends_on:
       - postgresql
     command: >
+      serve
       --pg-url 'postgresql://dephy:dephy@postgresql:5432/dephy_worker_registry'
       --api-addr '0.0.0.0:9000'
+      --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
       --worker-nostr-relay "${DEPHY_WR_WORKER_NOSTR_RELAY:-ws://127.0.0.1:8000}"
       --key "${DEPHY_WR_KEY}"
 
-  poo-archiver:
+  archiver:
     extends:
       file: components.yml
-      service: poo-archiver
+      service: daemon
     depends_on:
       - postgresql
     command: >
@@ -34,10 +36,10 @@ services:
       --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
       --key "${DEPHY_WR_KEY}"
 
-  poo-pinger:
+  pinger:
     extends:
       file: components.yml
-      service: poo-pinger
+      service: daemon
     depends_on:
       - postgresql
     command: >
@@ -47,14 +49,14 @@ services:
       --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
       --key "${DEPHY_WR_KEY}"
 
-  poo-checker:
+  ping-checker:
     extends:
       file: components.yml
-      service: poo-checker
+      service: daemon
     depends_on:
       - postgresql
     command: >
-      check
+      check_ping
       --forever
       --pg-url 'postgresql://dephy:dephy@postgresql:5432/dephy_worker_registry'
       --nostr-relay "${DEPHY_WR_NOSTR_RELAY:-ws://host.docker.internal:8000}"
