--- a/dephy-messaging-network/docker-compose.local-pg.yml
+++ b/dephy-messaging-network/docker-compose.local-pg.yml
@@ -15,7 +15,7 @@ services:
     healthcheck:
       test:
         - "CMD-SHELL"
-        - "pg_isready -U dephy -d dephy_messaging_network"
+        - "psql -h localhost -p 5432 -U dephy -d dephy_messaging_network -c 'SELECT 1' || exit 1"
       interval: 5s
       timeout: 5s
       retries: 5
